--- a/frontend/src/app/components/partials/sidebar-toggle/sidebar-toggle.component.css
+++ b/frontend/src/app/components/partials/sidebar-toggle/sidebar-toggle.component.css
@@ -1,4 +1,9 @@
 
+.menu-icon {
+    padding: 1rem;
+}
+
 .menu-icon:hover {
-    color: white;
+    cursor: pointer;
+    color: var(--toggle-color);
 }
