--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -34,7 +34,7 @@
             <option>5</option>
           </select>
         </div>
-        <div>
+        <div class="item-price">
           {{ cartItem.price | currency : "EUR" }}
         </div>
 
