--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -8,7 +8,7 @@
 .aside{
   width: 100%;
   padding: 1rem;
-  background-color: var(--transparent-strong);
+  background-color: var(--transparent-light);
   display: flex;
   justify-content: center;
   align-items: center;
