--- a/frontend/src/app/components/pages/orders-page/orders-page.component.css
+++ b/frontend/src/app/components/pages/orders-page/orders-page.component.css
@@ -1,5 +1,5 @@
 .wrapper {
-  margin-top: 3rem
+  margin-top: 3rem;
 }
 
 app-title {
@@ -18,7 +18,6 @@ app-title {
     margin-right: 3rem;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
     margin: 0 auto;
   }
 
@@ -53,5 +52,11 @@ app-title {
 
 
   
-
+  @media screen and (max-width: 700px) {
+    .content {
+      width: 100%;
+  
+      overflow-x: auto;
+    }
+  }
   
