--- a/frontend/src/app/components/partials/navigation/navigation.component.css
+++ b/frontend/src/app/components/partials/navigation/navigation.component.css
@@ -10,6 +10,7 @@ nav {
     transition:  0.5s ease;
 }
 
+
 nav.close .link-name {
     transition: opacity 0.5s ease-in-out;
 }
@@ -23,43 +24,7 @@ nav.close li a .link-name{
     pointer-events: none;
 }
 
-.logo {
-    width: 100%;
-    height: 60px;
-    padding: 1rem;
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    font-weight: 600;
-}
 
-.logo-name {
-    font-size: 22px;
-    color: var(--text-color);
-    white-space: nowrap;
-    transition: opacity 0.5s ease;
-}
-
-nav.close .logo-name {
-    opacity: 0;
-    pointer-events: none;
-}
-
-.logo-image {
-    width: 45px;
-    height: 45px;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    border: 2px solid #3f51b5;
-    background-color: #3f51b5;
-    color: #fff;
-    letter-spacing: 1.5px;
-    font-weight: 600;
-    font-size: 16px;
-}
 
 ul {
     padding: 0rem;
@@ -78,11 +43,6 @@ li:hover {
     cursor: pointer;
 }
 
-mat-icon {
-    display: flex;
-    align-items: center;
-}
-
 a {
     width: 100%;
     padding: 1rem 1.5rem;
@@ -99,14 +59,6 @@ a:hover {
     cursor: pointer;
 }
 
-a:hover .logo-image {
-    border-color: var(--toggle-color);
-}
-
-a:hover .logo-name {
-    color: var(--toggle-color);
-}
-
 li a > span {
     display: flex;
     justify-content: center;
@@ -119,11 +71,43 @@ li a > span {
     align-items: center;
 }
 
+.custom-icon {
+    padding: 0;
+    
+}
+
+.cart-btn {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: var(--primary-color);
+    position: relative; 
+  
+}
+
+.counter {
+    height: 20px;
+    width: 20px;
+    background: var(--accent-color);
+    color: var(--toggle-color);
+    border-radius: 100rem;
+    font-size: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    line-height: 11px;
+    position: absolute;
+    top: 5px;
+    left: 35px;
+}
+
 
 mat-icon {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 24px;
 }
 
 .menu-items  {
@@ -162,16 +146,6 @@ mat-icon {
         width: 250px;
     }
 
-    nav .logo-name {
-        opacity: 0;
-        pointer-events: none;
-    }
-
-    nav.close .logo-name {
-        opacity: 1;
-        pointer-events: auto;
-    }
-
     nav li a .link-name{
         opacity: 0;
         pointer-events: none;
@@ -182,7 +156,28 @@ mat-icon {
         pointer-events: auto;
     }
     
-    
+}
+
+
+@media screen and (max-width: 400px) {
+    nav {
+        width: 0px;
+    }
+
+    nav.close {
+        width: 250px;
+    }
+
+    nav li a .icon {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    nav.close li a .icon {
+        opacity: 1;
+        pointer-events: auto;
+    }
+
 }
 
 
