--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -63,11 +63,11 @@ a {
     --primary-color: #e3e3e3;
     --toggle-color: #3f51b5;
     --background-color: #242526; /* Dark background color */
-    --title-color: #fff; /* Light text color */
-    --text-color: #fff; /* Light text color */
+    --title-color: #f5f5f5; /* Light text color */
+    --text-color: #f5f5f5; /* Light text color */
     --disabled-color: #aeaeae;
     --light-background: #444; /* Slightly lighter background */
-    --transparent-light: #55555575; /* Slightly transparent light color */
+    --transparent-light: #242526eb; /* Slightly transparent light color */
     --transparent-strong: #66666695; /* Slightly transparent strong color */
     --glass: #444444be; /* Slightly transparent background */
     --light-color: #555; /* Slightly lighter text color */
