--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.html
@@ -15,7 +15,10 @@
   </div>
   <div class="buttons-container">
     <div class="buttons">
-      <button (click)="createOrder()">Go To Payment</button>
+      <button (click)="createOrder()">
+        <span>Go To Payment</span>
+        <span><mat-icon>arrow_forward</mat-icon></span>
+      </button>
     </div>
   </div>
 </div>
