--- a/frontend/src/app/components/pages/product-page/product-page.component.html
+++ b/frontend/src/app/components/pages/product-page/product-page.component.html
@@ -77,7 +77,10 @@
         </span>
       </div>
 
-      <button (click)="addToCart()">Add To Cart</button>
+      <button (click)="addToCart()">
+        <span><mat-icon>add</mat-icon></span>
+        <span>Add To Cart</span>
+      </button>
     </div>
   </div>
 </div>
