--- a/frontend/src/app/components/pages/checkout-page/checkout-page.component.css
+++ b/frontend/src/app/components/pages/checkout-page/checkout-page.component.css
@@ -44,10 +44,13 @@
   }
   
   button{
-    color: var(--toggle-color);
-    background-color: var(--primary-color);
     width: 100%;
     height: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--toggle-color);
+    background-color: var(--primary-color);
     font-size: 1.3rem;
     border: none;
     border-radius: 0.5rem;
@@ -57,6 +60,12 @@
   button:hover{
     opacity: .8;
     cursor: pointer;
+  }
+
+  button > span {
+    display: flex;
+    align-items: center;
+    margin-right: 0.5rem;
   }
   
   @media screen and (max-width: 700px) {
