--- a/frontend/src/app/components/partials/navigation/navigation.component.html
+++ b/frontend/src/app/components/partials/navigation/navigation.component.html
@@ -3,14 +3,14 @@
 
   <div class="menu-items">
     <ul class="nav-links" *ngIf="isAuth">
-      <li *ngIf="!user.isAdmin">
+      <li *ngIf="!user.isAdmin" (click)="isSmallScreen && closeMenu()">
         <a routerLink="/">
           <span><mat-icon class="icon">home_filled</mat-icon></span>
           <span class="link-name">Store</span>
         </a>
       </li>
 
-      <li>
+      <li  (click)="isSmallScreen && closeMenu()">
         <a *ngIf="!user.isAdmin" class="cart-btn" routerLink="/cart-page">
           <span><mat-icon class="custom-icon icon">shopping_cart</mat-icon></span>
           <span class="counter icon" *ngIf="cartQuantity">{{ cartQuantity }}</span>
@@ -18,21 +18,21 @@
         </a>
       </li>
 
-      <li *ngIf="user.isAdmin">
-        <a routerLink="/dashboard">
-          <span><mat-icon class="icon">home_filled</mat-icon></span>
+      <li *ngIf="user.isAdmin" (click)="isSmallScreen && closeMenu()">
+        <a routerLink="/dashboard" >
+          <span ><mat-icon class="icon">home_filled</mat-icon></span>
           <span class="link-name" *ngIf="user.isAdmin">Dashboard</span>
         </a>
       </li>
 
-      <li *ngIf="user.isAdmin">
+      <li *ngIf="user.isAdmin" (click)="isSmallScreen && closeMenu()">
         <a routerLink="/products">
           <span><mat-icon class="icon">category</mat-icon></span>
           <span class="link-name" *ngIf="user.isAdmin">Products</span>
         </a>
       </li>
 
-      <li>
+      <li (click)="isSmallScreen && closeMenu()">
         <a (click)="toggleSearchBar()">
           <span>
             <mat-icon class="icon">search</mat-icon>
@@ -41,7 +41,7 @@
         </a>
       </li>
 
-      <li>
+      <li (click)="isSmallScreen && closeMenu()">
         <a routerLink="/account">
           <span>
             <mat-icon class="icon">person</mat-icon>
@@ -50,7 +50,7 @@
         </a>
       </li>
 
-      <li *ngIf="!user.isAdmin">
+      <li *ngIf="!user.isAdmin" (click)="isSmallScreen && closeMenu()">
         <a routerLink="/orders">
           <span>
             <mat-icon class="icon">shop</mat-icon>
@@ -59,7 +59,7 @@
         </a>
       </li>
 
-      <li *ngIf="user.isAdmin">
+      <li *ngIf="user.isAdmin" (click)="isSmallScreen && closeMenu()">
         <a routerLink="/all-orders">
           <span>
             <mat-icon class="icon">shop</mat-icon>
@@ -68,7 +68,7 @@
         </a>
       </li>
 
-      <li *ngIf="user.isAdmin">
+      <li *ngIf="user.isAdmin" (click)="isSmallScreen && closeMenu()">
         <a routerLink="/users">
           <span>
             <mat-icon class="icon">people</mat-icon>
