--- a/frontend/src/app/components/pages/product-page/product-page.component.css
+++ b/frontend/src/app/components/pages/product-page/product-page.component.css
@@ -9,7 +9,8 @@
 }
 
 .box {
-  width: 70rem;
+  width: 80%;
+  max-width: 70rem;
   padding: 2rem;
   display: flex;
   justify-content: center;
@@ -169,10 +170,18 @@ button > span {
     height: fit-content;
   }
 
+  .box {
+    box-shadow: none;
+  }
+
 
   .box > *{
-    min-width: 10rem;
+    min-width: 20rem;
     max-width: 20rem;
+  }
+
+  .details {
+    padding: 1rem;
   }
 
 
