--- a/frontend/src/app/components/pages/register-page/register-page.component.css
+++ b/frontend/src/app/components/pages/register-page/register-page.component.css
@@ -3,8 +3,8 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    width: calc(100vw - 250px);
-    margin: 0 auto;
+    width: 100%;
+    margin: 3rem auto;
   }
 
 
@@ -42,13 +42,18 @@ form {
 
 app-button {
   margin-top: 1rem;
+  width: 100%;
 }
 
 @media screen and (max-width: 700px) {
+  .container {
+    width: 100%;
+  }
   .details {
     width: 100%;
-    padding: 1rem;
     max-width: 25rem;
+    padding: 1rem;
+    
   }
 
   
