--- a/frontend/src/app/components/partials/navigation/navigation.component.html
+++ b/frontend/src/app/components/partials/navigation/navigation.component.html
@@ -79,8 +79,8 @@
           <span class="link-name">Search</span>
         </a>
       </li>
-      
-      <li *ngIf="isAuth">
+
+      <li *ngIf="isAuth" (click)="isSmallScreen && closeMenu()">
         <a class="login-link" (click)="logout()">
           <span><mat-icon class="icon">logout</mat-icon></span>
 
@@ -88,7 +88,7 @@
         </a>
       </li>
 
-      <li *ngIf="!isAuth">
+      <li *ngIf="!isAuth" (click)="isSmallScreen && closeMenu()">
         <a class="login-link" routerLink="/login">
           <span><mat-icon class="icon">login</mat-icon></span>
           <span class="link-name">Login</span>
