Refactored components folder structure. Edited Readme.md

--- a/frontend/src/app/components/partials/card/card.component.html
+++ b/frontend/src/app/components/partials/card/card.component.html
@@ -9,7 +9,7 @@
 
     <span
       class="  material-icons favorite {{
-        user.id && favoriteProductsSet?.has(product.id) ? 'favorite' : 'not'
+        user.id && favoriteProductsSet.has(product.id) ? 'favorite' : 'not'
       }}"
       (click)="toggleFavourite(product)"
     >
