--- a/frontend/src/app/components/pages/common-pages/home/home.component.css
+++ b/frontend/src/app/components/pages/common-pages/home/home.component.css
@@ -5,17 +5,32 @@
   min-height: 90vh;
 }
 
-.aside{
+.aside-container {
   width: 100%;
   padding: 1rem;
   background-color: var(--transparent-light);
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 3rem;
+  align-items: start;
   position: fixed;
   z-index: 4;
 }
+
+.aside{
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center; 
+}
+
+.close-aside {
+  position: absolute;
+  top: 100;
+  right: 150px;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
 
 .hide {
   display: none;
@@ -65,7 +80,11 @@ app-search {
   }
   
 
-  @media screen and (max-width: 700px) {
+  @media screen and (max-width: 950px) {
+    .aside-container {
+      flex-direction: row;
+    }
+    
     .aside {
       flex-direction: column;
       align-items: center;
@@ -77,8 +96,8 @@ app-search {
       align-self: center;
     }
 
-    .products-container {
-      padding-top: 1rem;
+    .products-container.margin-top {
+      margin-top: 4rem; 
     }
     
   }
