hide favourite icon for unregistered users

--- a/frontend/src/app/components/pages/store-pages/product-page/product-page.component.html
+++ b/frontend/src/app/components/pages/store-pages/product-page/product-page.component.html
@@ -20,6 +20,7 @@
           {{ product.name }}
         </span>
         <span
+          *ngIf="isAuth"
           class=" 
         material-icons favorite {{
             user.id && favoriteProductsSet.has(product.id) ? 'favorite' : 'not'
