added search bar to product page

--- a/frontend/src/app/components/pages/store-pages/product-page/product-page.component.html
+++ b/frontend/src/app/components/pages/store-pages/product-page/product-page.component.html
@@ -1,93 +1,117 @@
-<app-not-found
+
+
+<div class="wrapper">
+  <app-not-found
   [visible]="!product.id"
   notFoundMessage="Product Not Found"
   resetLinkText="Back To Home"
 />
 
-<div class="back-navigation">
-  <mat-icon>chevron_left</mat-icon>
-  <a routerLink ="/"  class="link">Back to Strore</a>
-</div>
+  <div [ngClass]="isSearchBarVisible ? 'aside-container' : 'hide'">
+    <aside class="aside">
+      <app-search />
+      <app-tags (showCategory)="onShowCategory($event)" />
+    </aside>
 
-<div *ngIf="product?.id" class="container">
-  
-  <div class="box">
-    <img [src]="product.imageUrl" [alt]="product.name" />
+    <span class="close-aside" (click)="toggleSearchBar()">
+      <mat-icon>close</mat-icon>
+    </span>
+  </div>
 
-    <div class="details">
-      <div class="header">
-        <span class="name">
-          {{ product.name }}
-        </span>
-        <span
-          *ngIf="isAuth"
-          class=" 
-        material-icons favorite {{
-            user.id && favoriteProductsSet.has(product.id) ? 'favorite' : 'not'
-          }}"
-          (click)="toggleFavourite(product)"
-        >
-          favorite
-        </span>
-      </div>
-      <div class="rating">
-        <div class="stars">
-          <!-- In "rate" mode, show stars given by the current user -->
-          <div *ngIf="selectedMode === 'Rate'">
-            <app-star-rating
-              [stars]="product.stars"
-              [productId]="product.id"
-              (starClicked)="updateStars($event.stars, $event.productId)"
-            ></app-star-rating>
-          </div>
-
-          <!-- In "view" mode, show the average rating -->
-          <div *ngIf="selectedMode === 'View'">
-            <app-star-rating
-              [averageRating]="product.averageRating"
-              [productId]="product.id"
-            ></app-star-rating>
-          </div>
-
-          <!-- Dropdown menu for mode selection using mat-select -->
-          <div *ngIf="user.id" class="mode-select">
-            <label [style.display]="isOptionSelected() ? 'none' : 'block'">
-              Mode</label
+  <div cass="product-container" [ngClass]="isSearchBarVisible ? 'margin-top' : ''">
+    <div class="back-navigation" [ngClass]="isSearchBarVisible ? 'margin-top' : ''">
+      <mat-icon>chevron_left</mat-icon>
+      <a routerLink="/" class="link">Back to Strore</a>
+    </div>
+    
+    <div *ngIf="product?.id" class="container" [ngClass]="isSearchBarVisible ? 'margin-top' : ''">
+      <div class="box">
+        <img [src]="product.imageUrl" [alt]="product.name" />
+    
+        <div class="details">
+          <div class="header">
+            <span class="name">
+              {{ product.name }}
+            </span>
+            <span
+              *ngIf="isAuth"
+              class=" 
+            material-icons favorite {{
+                user.id && favoriteProductsSet.has(product.id) ? 'favorite' : 'not'
+              }}"
+              (click)="toggleFavourite(product)"
             >
-            <mat-select (selectionChange)="onModeSelectionChange($event)">
-              <mat-option
-                *ngFor="let option of modeOptions"
-                [value]="option.value"
-              >
-                {{ option.label }}
-              </mat-option>
-            </mat-select>
+              favorite
+            </span>
           </div>
+          <div class="rating">
+            <div class="stars">
+              <!-- In "rate" mode, show stars given by the current user -->
+              <div *ngIf="selectedMode === 'Rate'">
+                <app-star-rating
+                  [stars]="product.stars"
+                  [productId]="product.id"
+                  (starClicked)="updateStars($event.stars, $event.productId)"
+                ></app-star-rating>
+              </div>
+    
+              <!-- In "view" mode, show the average rating -->
+              <div *ngIf="selectedMode === 'View'">
+                <app-star-rating
+                  [averageRating]="product.averageRating"
+                  [productId]="product.id"
+                ></app-star-rating>
+              </div>
+    
+              <!-- Dropdown menu for mode selection using mat-select -->
+              <div *ngIf="user.id" class="mode-select">
+                <label [style.display]="isOptionSelected() ? 'none' : 'block'">
+                  Mode</label
+                >
+                <mat-select (selectionChange)="onModeSelectionChange($event)">
+                  <mat-option
+                    *ngFor="let option of modeOptions"
+                    [value]="option.value"
+                  >
+                    {{ option.label }}
+                  </mat-option>
+                </mat-select>
+              </div>
+            </div>
+          </div>
+    
+          <div class="origins">
+            <span *ngFor="let origin of product.origins">
+              {{ origin }}
+            </span>
+          </div>
+    
+          <div class="tags">
+            <a *ngFor="let tag of product.tags" routerLink="/tag/{{ tag }}">
+              {{ tag }}
+            </a>
+          </div>
+    
+          <div class="price">
+            <span>
+              {{ product.price | currency : "EUR" }}
+            </span>
+          </div>
+    
+          <button (click)="addToCart()">
+            <span><mat-icon>add</mat-icon></span>
+            <span>Add To Cart</span>
+          </button>
         </div>
       </div>
-
-      <div class="origins">
-        <span *ngFor="let origin of product.origins">
-          {{ origin }}
-        </span>
-      </div>
-
-      <div class="tags">
-        <a *ngFor="let tag of product.tags" routerLink="/tag/{{ tag }}">
-          {{ tag }}
-        </a>
-      </div>
-
-      <div class="price">
-        <span>
-          {{ product.price | currency : "EUR" }}
-        </span>
-      </div>
-
-      <button (click)="addToCart()">
-        <span><mat-icon>add</mat-icon></span>
-        <span>Add To Cart</span>
-      </button>
     </div>
+
   </div>
+
+  
+  
+
+
+
 </div>
+
