--- a/frontend/src/app/components/pages/common-pages/home/home.component.css
+++ b/frontend/src/app/components/pages/common-pages/home/home.component.css
@@ -78,6 +78,12 @@ app-search {
       scrollbar-color: var(--disabled-color) var(--shadow-color);
     }
   }
+
+  @media screen and (max-width: 700px) {
+    .close-aside {
+      right: 50px;
+    }
+  }
   
 
   @media screen and (max-width: 950px) {
