--- a/frontend/src/app/components/pages/store-pages/product-page/product-page.component.css
+++ b/frontend/src/app/components/pages/store-pages/product-page/product-page.component.css
@@ -1,23 +1,63 @@
-.container{
-  height: 100%;
-  padding: 40px 0 40px;
+
+.wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
-  flex: 1; 
+  min-height: 80vh;
   overflow: hidden;
 }
+
+.aside-container {
+  width: 100%;
+  padding: 1rem;
+  background-color: var(--transparent-light);
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  position: fixed;
+  z-index: 4;
+}
+
+.aside{
+  width: 100%;
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center; 
+}
+
+.close-aside {
+  position: absolute;
+  top: 100;
+  right: 150px;
+  padding: 0.5rem;
+  cursor: pointer;
+}
+
+
+.hide {
+  display: none;
+}
+
+app-search {
+  align-self: flex-start;
+}
+
 
 .back-navigation {
   padding-top: 2rem;
   margin: 0 auto;
-  width: 80%;
+  width: 100%;
   max-width: 70rem;
   display: flex;
   justify-content: start;
   align-items: center;
   color: var(--disabled-color);
   transition: color 0.3s ease;
+}
+
+.back-navigation.margin-top {
+  margin-top: 4rem; 
 }
 
 .link {
@@ -28,8 +68,24 @@
   color: var(--primary-color);
 }
 
+.product-container {
+    width: 100%;
+    margin: 0rem auto;
+    display: flex;
+}
+
+.container{
+  min-height: 70vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1; 
+  overflow: hidden;
+}
+
 .box {
-  width: 80%;
+  width: 100%;
   max-width: 70rem;
   padding: 1rem 2rem;
   display: flex;
@@ -185,6 +241,15 @@ button > span {
   margin-right: 0.5rem;
 }
 
+
+@media screen and (max-width: 700px) {
+  .close-aside {
+    right: 50px;
+  }
+}
+
+
+
 @media screen and (max-width: 900px) {
   img {
     height: fit-content;
@@ -193,7 +258,6 @@ button > span {
   .box {
     box-shadow: none;
   }
-
 
   .box > *{
     min-width: 20rem;
@@ -204,5 +268,30 @@ button > span {
     padding: 1rem;
   }
 
+}
+
+@media screen and (max-width: 950px) {
+  .aside-container {
+    flex-direction: row;
+  }
+  
+  .aside {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    gap: 1rem;
+  }
+
+  app-search {
+    align-self: center;
+  }
+
+  .back-navigation {
+    width: 80%;
+  }
+
+  .back-navigation.margin-top {
+    margin-top: 10rem; 
+  }
 
 }
