--- a/frontend/src/app/components/pages/common-pages/home/home.component.css
+++ b/frontend/src/app/components/pages/common-pages/home/home.component.css
@@ -79,12 +79,20 @@ app-search {
     }
   }
 
-  @media screen and (max-width: 700px) {
-    .close-aside {
-      right: 50px;
-    }
-  }
+
+
   
+
+
+
+
+  @media screen and (max-width: 1200px) {
+    .products-container {
+      width: 100%;
+      padding: 5rem 0;
+    }
+    
+  }
 
   @media screen and (max-width: 950px) {
     .aside-container {
@@ -108,11 +116,26 @@ app-search {
     
   }
 
-
-  @media screen and (max-width: 1200px) {
-    .products-container {
-      width: 100%;
-      padding: 5rem 0;
+  @media screen and (max-width: 700px) {
+    .close-aside {
+      right: 80px;
     }
-    
   }
+
+  @media screen and (max-width: 550px) {
+    .close-aside {
+      right: 50px;
+    }
+  }
+
+  @media screen and (max-width: 450px) {
+    .close-aside {
+      right: 1px;
+    }
+
+    .aside-container {
+      padding: 10px;
+      width: 88%;
+    }
+  }
+  
